--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,15 @@ a {
 
 img{
     max-width: 100%; /*evita que o overflow da imagem, a img ocupa 100% do elemento pai*/
+    display: block; /* faz com que a imagem se comporte sempre coo um bloco, ou seja do inicio ou aim do container
 }
 li{
     list-style: none; /*tira as bolinhas da lista*/
 }
 
-
+p, h1, h2, h3{
+    margin: 0px;
+}
 .menu{
     display: flex; /*alinha os elementos na horizontal*/
     gap: 20px; /*espaco entre os elementos*/
@@ -87,10 +90,41 @@ Estilização do conteúdo
     border-radius: 4px;
 }
 
+/* 
+========================
+Estilização das Vantagens  
+========================
+
+*/
+
+.vantagens{
+    background-color: #ffffff;
+    padding: 40px;
+}
+
+.vantagens-item{
+    display: grid;
+    grid-template-columns: auto  1fr;
+    gap: 10px 20px;
+    padding: 20px;
+}
+
+.vantagens-item p{
+    grid-column: 2;
+}
+
+/* 
+========================
+Estilização do Rodapé  
+========================
+
+*/
+
 .rodape{
     background-color: #ffffff;
     color: #000000;
     text-align: center;
-    padding: 40px;
+    padding: 40px 0;
     width: 100%; /*faz com que o elemento atual fique 100% do tamnaho do elemento pai (você não está utilizando o display)*/
+    box-sizing: border-box;
 }
